# inventoria

./: .gitignore  .pyproject.toml  Dockerfile.backend  README.md  app.py  debug.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt  startup-dashboard.sh  startup.sh  test-marimo.py  test.ipynb
.github/workflows/: ci-cd.yml
frontend/: Dockerfile.frontend  env.development  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  InventoryView.tsx  SupplierView.tsx  TransactionView.tsx  index.css  types.ts
frontend/src/components/: AddProductModal.tsx  Auth.css  EnvironmentInfo.tsx  Header.tsx  InitialStockModal.tsx  Inventory.css  Inventory.tsx  InventoryModal.tsx  Login.tsx  ProtectedRoute.tsx  QRCodeDisplayModal.tsx  QRScannerModal.tsx  Supplier.tsx  SupplierModal.tsx  TeamSelector.tsx  Transaction.tsx  TransactionModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useResponsive.ts
frontend/src/utils/: api.ts
models/: config.py  connector.py  db.py  schemas.py  viewer.py
models/sql/: create_member.sql  create_user.sql
pages/: 0_収支.py  100_メンバー.py
router/: __init__.py  auth.py  inventory.py  item.py  supplier.py  team.py  transaction.py
scripts/: dev.sh
static/: index.js  style.css
static/assets/: index-1tByaPix.js  index-44Mfw7bA.css  index-C5Gmm0gL.css  index-CRlGmtK_.js
templates/: QRコード在庫管理アプリ.html  index.html
